[gd_scene load_steps=25 format=3 uid="uid://c1cqahrbs025d"]

[ext_resource type="Script" path="res://map-elements/MonkeyCage/monkey_cage.gd" id="2_12jvl"]
[ext_resource type="PackedScene" uid="uid://c5nx4jcpdcmuy" path="res://entities/Monkeys/formal_monkey.tscn" id="2_h65kn"]
[ext_resource type="Texture2D" uid="uid://b6m03oxii7im3" path="res://assets/sprites/tilesets/cage.png" id="2_ocib3"]
[ext_resource type="PackedScene" uid="uid://duw8h7t4ye7j6" path="res://entities/Monkeys/pirate_monkey.tscn" id="3_0ii12"]
[ext_resource type="PackedScene" uid="uid://cdbs8ve7uh1wk" path="res://entities/Monkeys/roid_monkey.tscn" id="4_4gyj8"]
[ext_resource type="PackedScene" uid="uid://byjjnstxuhusk" path="res://entities/Monkeys/santa_monkey.tscn" id="5_g1bd5"]
[ext_resource type="PackedScene" uid="uid://dlv2gwbsq0ljg" path="res://entities/Monkeys/wizard_monkey.tscn" id="6_g1dgp"]
[ext_resource type="AudioStream" uid="uid://bqjcofc7qx8ds" path="res://assets/sfx/items/iron-door.wav" id="8_o2rp2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_at7vg"]
atlas = ExtResource("2_ocib3")
region = Rect2(0, 0, 224, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8quyc"]
atlas = ExtResource("2_ocib3")
region = Rect2(0, 0, 224, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wd81r"]
atlas = ExtResource("2_ocib3")
region = Rect2(224, 0, 224, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7l52"]
atlas = ExtResource("2_ocib3")
region = Rect2(448, 0, 224, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivttc"]
atlas = ExtResource("2_ocib3")
region = Rect2(672, 0, 224, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0teq"]
atlas = ExtResource("2_ocib3")
region = Rect2(672, 0, 224, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvpnc"]
atlas = ExtResource("2_ocib3")
region = Rect2(672, 0, 224, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7fxm"]
atlas = ExtResource("2_ocib3")
region = Rect2(448, 0, 224, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqdel"]
atlas = ExtResource("2_ocib3")
region = Rect2(224, 0, 224, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk57b"]
atlas = ExtResource("2_ocib3")
region = Rect2(0, 0, 224, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_2f1v1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_at7vg")
}],
"loop": true,
"name": &"cage_close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8quyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wd81r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7l52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivttc")
}],
"loop": false,
"name": &"cage_close_to_open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0teq")
}],
"loop": true,
"name": &"cage_open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvpnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7fxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqdel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk57b")
}],
"loop": true,
"name": &"cage_open_to_close",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yc4u2"]
size = Vector2(94, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hl67n"]
size = Vector2(33.6377, 2.78413)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_o341v"]
a = Vector2(0, -13)

[sub_resource type="Gradient" id="Gradient_s7p5s"]
offsets = PackedFloat32Array(0.11655, 0.871795)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gtl86"]
gradient = SubResource("Gradient_s7p5s")
fill = 1
fill_from = Vector2(0.532051, 0.519231)

[node name="MonkeyCage" type="StaticBody2D"]
y_sort_enabled = true
position = Vector2(658, 363)
collision_mask = 31
script = ExtResource("2_12jvl")
monkey_scenes = Array[PackedScene]([ExtResource("2_h65kn"), ExtResource("3_0ii12"), ExtResource("4_4gyj8"), ExtResource("5_g1bd5"), ExtResource("6_g1dgp")])

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_2f1v1")
animation = &"cage_open"

[node name="CollisionClose" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 27.5)
shape = SubResource("RectangleShape2D_yc4u2")

[node name="CollisionOpenLeft" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(-64.5564, 34.3231)
rotation = -0.380706
shape = SubResource("RectangleShape2D_hl67n")

[node name="CollisionOpenRight" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(61.6158, 33.0331)
rotation = -2.75631
shape = SubResource("RectangleShape2D_hl67n")

[node name="MonkeyHolder" type="Node2D" parent="."]
y_sort_enabled = true

[node name="OpenPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_o2rp2")
mix_target = 1
bus = &"SFX"

[node name="BackRightStop" type="CollisionShape2D" parent="."]
position = Vector2(45, 19)
shape = SubResource("SegmentShape2D_o341v")

[node name="BackLeftStop" type="CollisionShape2D" parent="."]
position = Vector2(-46, 19)
shape = SubResource("SegmentShape2D_o341v")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-1, 21)
scale = Vector2(2.96875, 1)
range_z_max = -1
texture = SubResource("GradientTexture2D_gtl86")
